fix: fix for comment made, added a constant for extra margin top to balance the level indicator

--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -85,6 +85,10 @@
   border-radius: 0.3rem;
 }
 
+.level.extra_margin_top {
+  transform: translateY(1.3rem);
+}
+
 .level.beginner {
   background: var(--beginner-level);
 }
